--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.aidendawes.amcham_app_v2">
    <application
-        android:label="amcham_app_v2"
+        android:label="AMCHAM ZA"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
