Before flutter create .

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,5 +73,6 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:26.1.1')
     implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-messaging:<latest_version>'
     compile 'com.android.support:multidex:1.0.1'
 }
