--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_launcher_icons: ^0.8.1
   firebase_messaging: ^7.0.3
   web_browser: ^0.4.0
+  url_launcher: ^5.7.10
 
 
 
