--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,28 +18,28 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 0.0.9+9
 
 environment:
-  sdk: ">=2.1.0-0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^1.0.2
-  firebase_auth: ^1.0.1
-  google_fonts: ^2.0.0
-  cloud_firestore: ^1.0.3
-  firebase_storage: ^8.0.1
-  mailer: ^5.0.0
-  add_2_calendar: ^2.0.1
-  flutter_launcher_icons: ^0.9.0
-  firebase_messaging: ^9.1.0
-  web_browser: ^0.5.0
-  url_launcher: ^6.0.3
+  firebase_core: ^0.5.3
+  firebase_auth: ^0.18.4+1
+  google_fonts: ^1.1.1
+  cloud_firestore: ^0.14.4
+  firebase_storage: ^5.2.0
+  mailer: ^3.2.1
+  add_2_calendar: ^1.4.0
+  flutter_launcher_icons: ^0.8.1
+  firebase_messaging: ^7.0.3
+  web_browser: ^0.4.0
+  url_launcher: ^5.7.10
 
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.1
 
 dev_dependencies:
   flutter_test:
