--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.0.9+9
+version: 0.0.10+10
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -34,6 +34,8 @@ dependencies:
   firebase_messaging: ^7.0.3
   web_browser: ^0.4.0
   url_launcher: ^5.7.10
+  flutter_web_browser: "^0.14.0"
+  url_encoder: ^0.0.3
 
 
 
