--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   url_launcher: ^5.7.10
   flutter_web_browser: "^0.14.0"
   url_encoder: ^0.0.3
+  youtube_plyr_iframe: ^1.3.7
 
 
 
