--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,14 +34,16 @@ dependencies:
   web_browser: ^0.4.0
   url_launcher: ^5.7.10
   flutter_web_browser: "^0.14.0"
-  url_encoder: ^0.0.3
-  youtube_plyr_iframe: ^1.3.7
+  youtube_player_flutter: ^7.0.0+7
+  
+
 
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
+  
 
 dev_dependencies:
   flutter_test:
