--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,18 +23,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^0.5.3
-  firebase_auth: ^0.18.4+1
-  google_fonts: ^1.1.1
-  cloud_firestore: ^0.14.4
-  firebase_storage: ^5.2.0
-  add_2_calendar: ^1.4.0
-  flutter_launcher_icons: ^0.8.1
-  firebase_messaging: ^7.0.3
-  web_browser: ^0.4.0
-  url_launcher: ^5.7.10
-  flutter_web_browser: "^0.14.0"
-  youtube_player_flutter: ^7.0.0+7
+  firebase_core: ^1.3.0
+  firebase_auth: ^1.4.1
+  google_fonts: ^2.1.0
+  cloud_firestore: ^2.2.2
+  firebase_storage: ^8.1.3
+  add_2_calendar: ^2.1.0
+  flutter_launcher_icons: ^0.9.0
+  firebase_messaging: ^10.0.2
+  web_browser: ^0.5.0
+  url_launcher: ^6.0.7
+  flutter_web_browser: ^0.14.0
+  youtube_player_flutter: ^8.0.0
   
 
 
@@ -47,8 +47,6 @@ dependencies:
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter
-  integration_test:
     sdk: flutter
 
 flutter_icons:
