--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 0.0.12+12
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -35,6 +35,7 @@ dependencies:
   url_launcher: ^6.0.7
   flutter_web_browser: ^0.14.0
   youtube_player_flutter: ^8.0.0
+  youtube_player_iframe: ^2.1.0
   
 
 
@@ -42,7 +43,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.1
+  cupertino_icons: ^1.0.3
   
 
 dev_dependencies:
