--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,10 +49,12 @@
 	<false/>
 	<key>io.flutter.embedded_views_preview</key>
 	<true/>
+	<key>io.flutter.embedded_views_preview</key>
+	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
+		<key>NSAllowsArbitraryLoads</key><true/>
+		<key>NSAllowsArbitraryLoadsInWebContent</key><true/>
 	</dict>
 </dict>
 </plist>
